Add Twitter Card

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="Cut-and-Go" />
     <meta property="og:description" content="離身文藝，敵性放送。" />
     <meta property="og:image" content="https://cut-and-go.org/img/cover.png" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@bufhdy" />
     <meta property="og:url" content="https://cut-and-go.org/" />
     <style type="text/css">
