--- a/index.html
+++ b/index.html
@@ -15,19 +15,29 @@
     <meta property="og:url" content="https://cut-and-go.org/" />
     <style type="text/css">
         * { margin: 0; }
+        
         body {
             background: #E8D08F;
         }
-        #text {
+
+        #words_1 {
+        	position: fixed;
+        	left: 30px;
+        	top: 30px;
+        	height: 20vh;
+        }
+
+        #words_2 {
             position: fixed;
             right: 30px;
             bottom: 30px;
-            height: 15vh;
+            height: 10vh;
         }
     </style>
 </head>
 <body>
-    <img src="to-be-continue.svg" id="text" />
+	<img src="words.svg" id="words_1" />
+    <img src="to-be-continue.svg" id="words_2" />
 </body>
 </html>
 
