--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html lang="zh-tw">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="img/icon.png" />
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="icon" type="image/x-icon" href="https://cut-and-go.org/img/icon.png" />
+    <link rel="apple-touch-icon" href="https://cut-and-go.org/img/apple-touch-icon.png" />
     <title>Cut-and-Go</title>
     <meta name="description" content="離身文藝，敵性放送。" />
     <meta property="og:site_name" content="Cut-and-Go" />
@@ -36,8 +36,8 @@
     </style>
 </head>
 <body>
-	<img src="instruction.svg" id="words_1" />
-    <img src="404.svg" id="words_2" />
+	<img src="https://cut-and-go.org/instruction.svg" id="words_1" />
+    <img src="https://cut-and-go.org/404.svg" id="words_2" />
 </body>
 </html>
 
